k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes-api-service
  namespace: quotes-app
  labels:
    app: quotes
spec:
  selector:
    app: quotes
    tier: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
